# rssbot

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  README.en.md  README.md  build.rs  docker-compose.yml  rssbot.sh  rust-toolchain
.github/: dependabot.yml
.github/workflows/: docker.yml  github-release.yml  rust.yml
locales/: en.toml  zh.toml
src/: checker.rs  client.rs  cmdhandels.rs  cmdhandles.rs  commands.rs  data.rs  errors.rs  feed.rs  fetcher.rs  gardener.rs  main.rs  messages.rs  opml.rs  telebot_missing.rs  utlis.rs
src/commands/: export.rs  rss.rs  start.rs  sub.rs  unsub.rs
src/handlers/: mod.rs
telebot/: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
telebot-derive/: Cargo.toml  README.md
telebot-derive/src/: lib.rs
telebot/examples/: error_handling.rs  inline_bot.rs  print_everything.rs  reply.rs  send_self.rs
telebot/src/: bot.rs  error.rs  file.rs  functions.rs  lib.rs  objects.rs
tests/data/: atom_0.3.xml  atom_1.0.xml  encoding.xml  rss_0.9.xml  rss_0.91.xml  rss_0.92.xml  rss_0.93.xml  rss_0.94.xml  rss_1.0.xml  rss_2.0.xml
tools/: build-release
