[package]
name = "rssbot"
version = "2.0.0-alpha.9"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[features]
default = []

# enable this to set a subscription limit
hosted-by-iovxw = []

[build-dependencies]
ctl10n = "0.2.0"

[dependencies]
lazy_static = "1.4"
once_cell = "1.4"
anyhow = "1.0"
structopt = "0.3"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3"
quick-xml = { version = "0.19", features = ["encoding"] }
chrono = "0.4"
pinyin = "0.8"
either = "1.6"

[dependencies.tbot]
version = "0.6"
default-features = false
features = ["rustls", "proxy"]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["rustls-tls", "gzip", "json"]
