[package]
name = "rssbot"
version = "2.0.0-alpha.10"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2018"

[features]
default = []

# enable this to set a subscription limit
hosted-by-iovxw = ["reqwest/trust-dns"]

[build-dependencies]
ctl10n = "0.2.0"

[dependencies]
lazy_static = "1.4"
once_cell = "1.8"
anyhow = "1.0"
structopt = "0.3"
futures = "0.3"
tokio = { version = "1.11", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4"
quick-xml = { version = "0.22", features = ["encoding"] }
chrono = "0.4"
pinyin = "0.8"
either = "1.6"
atomicwrites = "0.3"

[dependencies.tbot]
version = "0.6"
git = "https://gitlab.com/SnejUgal/tbot.git"
default-features = false
features = ["rustls", "proxy"]

[dependencies.hyper-proxy]
version = "0.9"
default-features = false
features = ["rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "gzip", "json"]
