[package]
name = "rssbot"
version = "2.0.0-alpha.11"
authors = ["iovxw <iovxw@outlook.com>"]
edition = "2021"

[features]
default = ["rustls"]

# enable this to set a subscription limit
hosted-by-iovxw = ["reqwest/trust-dns"]
native-tls = [
    "tbot/default",
    "hyper-proxy/default",
    "reqwest/default",
    "reqwest/native-tls-vendored",
    "reqwest/native-tls-alpn",
]
rustls = [
    "tbot/rustls",
    "hyper-proxy/rustls",
    "reqwest/rustls-tls",
]

[build-dependencies]
ctl10n = "0.2.0"

[dependencies]
lazy_static = "1.4"
once_cell = "1.13"
anyhow = "1.0"
structopt = "0.3"
futures = "0.3"
tokio = { version = "1.13", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.4"
quick-xml = { version = "0.23", features = ["encoding", "escape-html"] }
chrono = "0.4"
pinyin = "0.9"
either = "1.6"
atomicwrites = "0.3"

[dependencies.tbot]
version = "0.6"
git = "https://gitlab.com/SnejUgal/tbot.git"
default-features = false
features = ["proxy"]

[dependencies.hyper-proxy]
version = "0.9"
default-features = false

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["gzip", "json"]
