[package]
name = "telebot-derive"
version = "0.0.6"
authors = ["bytesnake [bytesnake@mailbox.org"]

description = "Getters and setters for the telebot library"
license = "MIT"

publish = false

[lib]
proc-macro = true
# Unit tests don't seem to work for proc-macro crates.
test = false

[dependencies]
syn = "0.11"
quote = "0.3.3"
