[package]
name = "telebot"
version = "0.1.1"

authors = ["bytesnake <bytesnake@mailbox.org>"]
license = "MIT"
description = "A wrapper around the telegram bot api, powered by futures"

repository = "https://github.com/bytesnake/telebot"
readme = "README.md"
documentation = "https://docs.rs/telebot"

keywords = ["telebot", "telegram", "bot", "chat"]

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
curl = "^0.4.1"
futures = "^0.1.7"
tokio-core = "^0.1.2"
tokio-curl = "^0.1.6"
telebot-derive = { path = "../telebot-derive" }
